# proyecto-de-software

./: README.md
admin/: .gitignore  README.md  app.py  poetry.lock:Zone.Identifier  pyproject.toml
admin/public/: carnetStyle.css  error.css:Zone.Identifier  main.js  style.css
admin/src/api/club/: discipline.py  private_api.py  public_api.py
admin/src/errors/: database.py
admin/src/models/: __init__.py  database.py  seeds.py  settings.py
admin/src/models/auth/: __init__.py  permission.py  role.py  user.py
admin/src/models/club/: __init__.py  discipline.py  member.py  membership.py  movement.py  suscription.py  tariff.py
admin/src/services/: discipline.py  login.py  member.py  membership.py  movement.py  paginator.py  settings.py  suscription.py  user.py  utils.py
admin/src/web/: __init__.py  config.py
admin/src/web/controllers/: auth.py  discipline.py  license.py  member.py  movement.py  settings.py  suscription.py  user.py
admin/src/web/forms/: discipline.py  member.py  movement.py  suscription.py  user.py
admin/src/web/forms/discipline/: forms.py
admin/src/web/forms/license/: forms.py
admin/src/web/forms/setting/: forms.py  mensualPayment.py
admin/src/web/helpers/: api.py  auth.py  handlers.py
admin/src/web/public/: main.js  style.css
admin/src/web/templates/: error.html  index.html  layout.html
admin/src/web/templates/auth/: login.html
admin/src/web/templates/disciplines/: create.html  index.html  update.html
admin/src/web/templates/issues/: index.html
admin/src/web/templates/license/: carnet.html  crop.html  img_show.html  (+3 more)
(+77 files in other folders)
