[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["agustingenoves <agustingenoves@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-Session = "^0.4.0"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.3"
Flask-WTF = "^1.0.1"
reportlab = "^3.6.11"
WTForms = {extras = ["email"], version = "^3.0.1"}
marshmallow-sqlalchemy = "^0.28.1"
PyJWT = "^2.6.0"
flask-cors = "^3.0.10"
Pillow = "^9.3.0"
qrcode = {extras = ["pil"], version = "^7.3.1"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flask-shell-ipython = "^0.4.1"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
